@@ -1,3 +1,9 @@
+2008-05-21  Dan Williams  <dcbw@redhat.com>
+
+	* src/wireless-security/wireless-security.c
+		- (ws_802_1x_auth_combo_init): fix counting of active item in the
+			auth popup menu (rh #447716)
+
 2008-05-15  Tambet Ingo  <tambet@gmail.com>
 
 	Update GConf connections after all the changes are done to avoid
